--- a/src/public/sass/_ser.scss
+++ b/src/public/sass/_ser.scss
@@ -87,6 +87,10 @@
 }
 
 @media (min-width: 375px) and (max-width: 409px) {
+    .inner__con {
+        display: none;
+    }
+    
     .ser {
         .container {
             text-align: center;
@@ -117,6 +121,10 @@
 }
 
 @media (min-width: 410px) and (max-width: 539px) {
+    .inner__con {
+        display: none;
+    }
+    
     .ser {
         .container {
             text-align: center;
@@ -147,6 +155,10 @@
 }
 
 @media (min-width: 540px) and (max-width: 767px) {
+    .inner__con {
+        display: none;
+    }
+    
     .ser {
         .container {
             text-align: center;
