--- a/src/views/layouts/servicios.hbs
+++ b/src/views/layouts/servicios.hbs
@@ -67,9 +67,11 @@
                                 <i>Tu negocio y tus productos en Internet</i>
                             </p>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum unde minus quod placeat
-                            eius, labore perferendis corrupti vel ut, illum necessitatibus ipsum pariatur debitis
-                            itaque harum vitae nostrum et? Praesentium.</p>
+                        <p>
+                            Desarrollamos Web y Aplicaciones útiles y funcionales para tu negocio 
+                            con funciones ágiles y personalizadas y un control administrativo para optimizar
+                            el desempeño del sistema y organizar las tareas del día a día.
+                        </p>
                         <div class="serv__icons">
                             <img src="/img/services/draw-dev.png" alt="Servicios k1n0 | Desarrollo" title="Servicios k1n0 | Desarrollo" class="icon--items">
                         </div>
@@ -97,9 +99,10 @@
                                 <i>La visibilidad de tu negocio en alta calidad</i>
                             </p>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum unde minus quod placeat
-                            eius, labore perferendis corrupti vel ut, illum necessitatibus ipsum pariatur debitis
-                            itaque harum vitae nostrum et? Praesentium.</p>
+                        <p>
+                            La visibilidad de tu negocio es fundamental para atraer un mayor volúmen del 
+                            mercado, optimiza tus canales con material fotográfico y audiovisual de alta definición.
+                        </p>
                         <div class="serv__icons">
                             <img src="/img/services/draw-vid.png" alt="Servicios k1n0 | Foto y video" title="Servicios k1n0 | Foto y video" class="icon--items">
                         </div>
@@ -135,11 +138,11 @@
                                             <i>Tu web en el primer lugar</i>
                                         </p>
                                     </div>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum unde minus quod
-                                        placeat
-                                        eius, labore perferendis corrupti vel ut, illum necessitatibus ipsum pariatur
-                                        debitis
-                                        itaque harum vitae nostrum et? Praesentium.</p>
+                                    <p>
+                                        Haz que tu sitio web genere un mayor tráfico, ocupando el primer lugar en los motores
+                                        de búsqueda y optimizando las palabras y frases clave para que te encuentre el
+                                        mundo entero.
+                                    </p>
                                     <div class="serv__icons">
                                         <img src="/img/services/draw-pos.png" alt="Servicios k1n0 | SEO" title="Servicios k1n0 | SEO" class="icon--items">
                                     </div>
@@ -168,11 +171,10 @@
                                             <i>Las comunidades de tu negocio al alcance</i>
                                         </p>
                                     </div>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum unde minus quod
-                                        placeat
-                                        eius, labore perferendis corrupti vel ut, illum necessitatibus ipsum pariatur
-                                        debitis
-                                        itaque harum vitae nostrum et? Praesentium.</p>
+                                    <p>
+                                        Que tus redes sociales no se queden en el olvido. Dale vida a tus canales con publicaciones
+                                        y material multimedia atractivo y aumenta la participación de los públicos.
+                                    </p>
                                     <div class="serv__icons">
                                         <img src="/img/services/draw-soc.png" alt="Servicios k1n0 | CM" title="Servicios k1n0 | CM" class="icon--items">
                                     </div>
@@ -201,11 +203,10 @@
                                             <i>Organizamos tu negocio desde adentro</i>
                                         </p>
                                     </div>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum unde minus quod
-                                        placeat
-                                        eius, labore perferendis corrupti vel ut, illum necessitatibus ipsum pariatur
-                                        debitis
-                                        itaque harum vitae nostrum et? Praesentium.</p>
+                                    <p>
+                                        La mejor estrategia depende de un objetivo claro que se ajuste a las necesidades
+                                        de tu negocio. Conoce los planes de comunicación más inteligentes en K1n0.com
+                                    </p>
                                     <div class="serv__icons">
                                         <img src="/img/services/draw-org.png" alt="" class="icon--items">
                                     </div>
