--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -5,23 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http--equiv="X-UA-Compatible" content="ie=edhge">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JLP0S9FLPD"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-JLP0S9FLPD');
+    </script>
     {{!-- Propiedades OG --}}
-    <meta property="og:title" content="k1n0c0m | Servicios web y comunicaciones en Medellín" />
-    <meta property="og:description"
-        content="k1n0c0m | Servicios web y comunicaciones en Medellín | Comunicaciones y desarrollo web" />
-    <meta property="og:type" content="Web" />
-    <meta property="og:url" content="https://www.k1n0.com.co/" />
-    <meta property="og:site_name" content="k1n0c0m" />
-    <meta property="og:image" content="https://www.k1n0.com.co/img/logo-intro-black.jpg" />
-    <meta property="og:image:width" content="60" />
-    <meta property="og:image:height" content="60" />
+    <meta property="og:title" content="k1n0c0m | Servicios web y comunicaciones en Medellín">
+    <meta property="og:type" content="Web">
+    <meta property="og:url" content="www.k1n0.com.co">
+    <meta property="og:image" content="www.k1n0.com.co/img/logo-intro-black.jpg">
+    <meta property="og:image:width" content="60">
+    <meta property="og:image:height" content="60">
     <meta property="og:local" content="es_LA" />
-    <meta name="google-site-verification" content="Ljsin1yVzfgxv31NsdVzUlObTNPOn-RHEMomyfNrA1E" />
+    <meta property="og:description" content="k1n0c0m | Servicios web y comunicaciones en Medellín | Comunicaciones y desarrollo web">
+    <meta property="og:site_name" content="k1n0c0m">
     {{!-- SEO --}}
-    <meta name="description"
-        content="k1n0c0m | Servicios web y comunicaciones en Medellín | Comunicación digital a la medida">
-    <meta name="keywords"
-        content="servicios web, desarrollo web, comunicaciones, publicidad, comunicacion digital, posicionamiento, seo" />
+    <meta name="google-site-verification" content="Ljsin1yVzfgxv31NsdVzUlObTNPOn-RHEMomyfNrA1E">
+    <meta name="description" content="k1n0c0m | Servicios web y comunicaciones en Medellín | Comunicación digital a la medida">
+    <meta name="keywords" content="servicios web, desarrollo web, comunicaciones, publicidad, comunicacion digital, posicionamiento, seo">
     <meta name="author" content="k1n0">
     {{!-- Título --}}
     <title>K1n0.c0m | Servicios web y comunicaciones en Medellín</title>
@@ -40,15 +46,7 @@
     {{!-- Favicon --}}
     <link rel="icon" type="image/ico" href="/img/favicon-ico-kino.ico">
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JLP0S9FLPD"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-JLP0S9FLPD');
-    </script>
+    
 </head>
 
 <body>
