--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -18,7 +18,7 @@
     <meta property="og:title" content="k1n0c0m | Servicios web y comunicaciones en Medellín">
     <meta property="og:type" content="Web">
     <meta property="og:url" content="www.k1n0.com.co">
-    <meta property="og:image" content="www.k1n0.com.co/img/logo-intro-black.jpg">
+    <meta property="og:image" content="https://www.k1n0.com.co/img/logo-intro-black.jpg">
     <meta property="og:image:width" content="60">
     <meta property="og:image:height" content="60">
     <meta property="og:local" content="es_LA" />
