--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -17,8 +17,10 @@
     {{!-- Propiedades OG --}}
     <meta property="og:title" content="k1n0c0m | Servicios web y comunicaciones en Medellín">
     <meta property="og:type" content="Web">
-    <meta property="og:url" content="http://www.k1n0.com.co">
+    <meta property="og:url" content="http://www.k1n0.com.co/">
     <meta property="og:image" content="http://www.k1n0.com.co/img/logo-intro-black.jpg">
+    <meta property="og:image:secure_url" content="https://www.k1n0.com.co/img/logo-intro-black.jpg">
+    <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="60">
     <meta property="og:image:height" content="60">
     <meta property="og:local" content="es_LA" />
@@ -30,7 +32,7 @@
     <meta name="keywords" content="servicios web, desarrollo web, comunicaciones, publicidad, comunicacion digital, posicionamiento, seo">
     <meta name="author" content="k1n0">
     {{!-- Título --}}
-    <title>K1n0.c0m | Servicios web y comunicaciones en Medellín</title>
+    <title>K1n0.com.co | Servicios web y comunicaciones en Medellín</title>
     {{!-- Google Font --}}
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
