--- a/src/views/layouts/servicios.hbs
+++ b/src/views/layouts/servicios.hbs
@@ -208,7 +208,7 @@
                                         de tu negocio. Conoce los planes de comunicación más inteligentes en K1n0.com
                                     </p>
                                     <div class="serv__icons">
-                                        <img src="/img/services/draw-org.png" alt="" class="icon--items">
+                                        <img src="/img/services/draw-org.png" alt="k1n0 | Planeación" title="k1n0 | Planeación" class="icon--items">
                                     </div>
                                     <div class="serv__link">
                                         {{#if user}}
