--- a/src/views/partials/home.hbs
+++ b/src/views/partials/home.hbs
@@ -8,21 +8,21 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/img/kino-bg-a.jpg" class="d-block w-100" alt="...">
+                <img src="/img/kino-bg-a.jpg" class="d-block w-100" alt="k1n0 Diseño" title="k1n0 Diseño">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Diseño e ilustración</h5>
                     <p>Diseño profesional, personalizado y con calidad de punta.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/img/kino-bg-b.jpg" class="d-block w-100" alt="...">
+                <img src="/img/kino-bg-b.jpg" class="d-block w-100" alt="k1n0 Comunicaciones" title="k1n0 Comunicaciones">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Planeación y Comunicación</h5>
                     <p>Planes de comunicación estratégicos para el rendimiento de cualquier compañía.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/img/kino-bg-c.jpg" class="d-block w-100" alt="...">
+                <img src="/img/kino-bg-c.jpg" class="d-block w-100" alt="k1n0 Web Develop" title="k1n0 Desarrollo Web">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Desarrollo Web y App's</h5>
                     <p>Funcionalidad, navegación y velocidad en todos tus sistemas.</p>
@@ -49,21 +49,21 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/img/kino-bg-amob.jpg" class="d-block w-100" alt="...">
+                <img src="/img/kino-bg-amob.jpg" class="d-block w-100"  alt="k1n0 Diseño Ilustraciones" title="k1n0 | Diseño Ilustraciones">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Diseño e ilustración</h5>
                     <p>Diseño profesional, personalizado y con calidad de punta.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/img/kino-bg-bmob.jpg" class="d-block w-100" alt="...">
+                <img src="/img/kino-bg-bmob.jpg" class="d-block w-100" alt="k1n0 Comunicaciones" title="k1n0 | Comunicaciones">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Planeación y Comunicación</h5>
                     <p>Planes de comunicación estratégicos para el rendimiento de cualquier compañía.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/img/kino-bg-cmob.jpg" class="d-block w-100" alt="...">
+                <img src="/img/kino-bg-cmob.jpg" class="d-block w-100" alt="k1n0 Desarrollo Web" title="k1n0 | Desarrollo Web/Apps">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Desarrollo Web y App's</h5>
                     <p>Funcionalidad, navegación y velocidad en todos tus sistemas.</p>
@@ -86,7 +86,7 @@
 <div class="intro">
     <div class="container">
         <div class="intro__img">
-            <img src="/img/logo-intro-black.png" alt="">
+            <img src="/img/logo-intro-black.png" alt="k1n0 Servicios Web" title="k1n0 | Servicios Web">
         </div>
         <div class="intro__txt">
             <div class="txt__header">
@@ -126,7 +126,7 @@
                                         <h3>Diseño personalizado y original</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/design.png" alt="">
+                                        <img class="serv__img--item" src="/img/services/design.png" alt="k1n0 Diseño Ilustraciones" title="k1n0 | Diseño Ilustraciones">
                                     </div>
                                     <div class="serv__body">
                                         <p>
@@ -140,7 +140,7 @@
                                         <h3>Desarrollo web y móvil</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/android.png" alt="">
+                                        <img class="serv__img--item" src="/img/services/android.png" alt="k1n0 Web/Apps" title="k1n0 | Desarrollo Web/Apps">
                                     </div>
                                     <div class="serv__body">
                                         <p>
@@ -154,7 +154,7 @@
                                         <h3>Fotografía y retoque profesional</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/photo.png" alt="">
+                                        <img class="serv__img--item" src="/img/services/photo.png" alt="k1n0 Fotografía" title="k1n0 | Fotografía">
                                     </div>
                                     <div class="serv__body">
                                         <p>
@@ -177,7 +177,7 @@
                                         <h3>Planeación organizacional</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/planning.png" alt="">
+                                        <img class="serv__img--item" src="/img/services/planning.png" alt="k1n0 Planeación" title="k1n0 | Planeación">
                                     </div>
                                     <div class="serv__body">
                                         <p>
@@ -191,7 +191,7 @@
                                         <h3>Diagnóstico SEO/Posicionamiento</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/position.png" alt="">
+                                        <img class="serv__img--item" src="/img/services/position.png" alt="k1n0 SEO" title="k1n0 | SEO Posicionamiento">
                                     </div>
                                     <div class="serv__body">
                                         <p>
@@ -205,7 +205,7 @@
                                         <h3>Producción y edición audiovisual</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/video.png" alt="">
+                                        <img class="serv__img--item" src="/img/services/video.png" alt="k1n0 Video" title="k1n0 | Audiovisuales">
                                     </div>
                                     <div class="serv__body">
                                         <p>
@@ -246,12 +246,12 @@
                                         <h3>Diseño personalizado y original</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/design.png" alt="">
+                                        <img class="serv__img--item" src="/img/services/design.png" alt="k1n0 Diseño Ilustraciones" title="k1n0 | Diseño Ilustraciones">
                                     </div>
                                     <div class="serv__body">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum
-                                            reprehenderit
-                                            placeat repudiandae molestiae quia quos ipsa.</p>
+                                        <p>
+                                            <i>Diseños e ilustraciones personalizadas e innovadoras</i>
+                                        </p>
                                     </div>
                                 </div>
 
@@ -267,15 +267,15 @@
 
                                 <div class="serv__one">
                                     <div class="serv__header">
-                                        <h3>Desarrollo web y<br>móvil</h3>
+                                        <h3>Desarrollo web y móvil</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/android.png" alt="">
+                                        <img class="serv__img--item" src="/img/services/android.png" alt="k1n0 Web/Apps" title="k1n0 | Desarrollo Web/Apps">
                                     </div>
                                     <div class="serv__body">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum
-                                            reprehenderit
-                                            placeat repudiandae molestiae quia quos ipsa.</p>
+                                        <p>
+                                            <i>Webs y aplicativos ágiles y funcionales</i>
+                                        </p>
                                     </div>
                                 </div>
 
@@ -292,12 +292,12 @@
                                         <h3>Fotografía y retoque profesional</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/photo.png" alt="">
+                                        <img class="serv__img--item" src="/img/services/photo.png" alt="k1n0 Fotografía" title="k1n0 | Fotografía">
                                     </div>
                                     <div class="serv__body">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum
-                                            reprehenderit
-                                            placeat repudiandae molestiae quia quos ipsa.</p>
+                                        <p>
+                                            <i>Fotografía y retoque profesional para toda ocasión</i>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -312,12 +312,12 @@
                                         <h3>Planeación organizacional</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/planning.png" alt="">
+                                        <img class="serv__img--item" src="/img/services/planning.png" alt="k1n0 Planeación" title="k1n0 | Planeación">
                                     </div>
                                     <div class="serv__body">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum
-                                            reprehenderit
-                                            placeat repudiandae molestiae quia quos ipsa.</p>
+                                        <p>
+                                            <i>Las estrategias más efectivas para su negocio</i>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -331,12 +331,12 @@
                                         <h3>Diagnóstico SEO/Posicionamiento</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/position.png" alt="">
+                                        <img class="serv__img--item" src="/img/services/position.png" alt="k1n0 SEO" title="k1n0 | SEO Posicionamiento">
                                     </div>
                                     <div class="serv__body">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum
-                                            reprehenderit
-                                            placeat repudiandae molestiae quia quos ipsa.</p>
+                                        <p>
+                                            <i>Sea el primero en los resultados de búsqueda</i>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -350,12 +350,12 @@
                                         <h3>Producción y edición audiovisual</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/video.png" alt="">
+                                        <img class="serv__img--item" src="/img/services/video.png" alt="k1n0 Video" title="k1n0 | Audiovisuales">
                                     </div>
                                     <div class="serv__body">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum
-                                            reprehenderit
-                                            placeat repudiandae molestiae quia quos ipsa.</p>
+                                        <p>
+                                            <i>Producciones de alta definición y multimedia</i>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -439,11 +439,11 @@
                 <h3>Regístrate</h3>
                 {{#if user}}
                 <a href="/signup">
-                    <img src="/img/usr-red.png" alt="" class="sol__img">
+                    <img src="/img/usr-red.png" alt="k1n0 | Registro" title="k1n0 | Registro" class="sol__img">
                 </a>
                 {{else}}
                 <a href="/links/add">
-                    <img src="/img/usr-red.png" alt="" class="sol__img">
+                    <img src="/img/usr-red.png" alt="k1n0 | Añadir" title="k1n0 | Añadir Servicios" class="sol__img">
                 </a>
                 {{/if}}
                 <p>Registra tus datos personales y realiza una solicitud contándonos tu caso o indicando el servicio que
@@ -453,7 +453,7 @@
             <div class="body__section">
                 <h3>Contáctanos</h3>
                 <a href="https://wa.link/ra2121">
-                    <img src="/img/whats.png" alt="" class="sol__img">
+                    <img src="/img/whats.png" alt="k1n0 | Whatsapp" title="k1n0 | Whatsapp" class="sol__img">
                 </a>
                 <p>Comunícate a nuestra línea de atención en Whatsapp y pide un ticket de asesoramiento<br>
                     <strong>¡sin costo alguno!</strong>
