--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -10,15 +10,15 @@
                 <div class="footer__section--body">
                     <ul class="section--sitemap">
                         <li><a href="/">Inicio</a></li>
-                        <li><a href="/">Nosotros</a></li>
-                        <li><a href="/">Servicios</a></li>
-                        <li><a href="/">Contacto</a></li>
+                        <li><a href="/nosotros">Nosotros</a></li>
+                        <li><a href="/servicios">Servicios</a></li>
+                        <li><a href="https://wa.link/ra2121" target="blank" rel="nofollow">Contacto</a></li>
                     </ul>
                     <ul class="section--sitemap--dos">
-                        <li><a href="/">Política de Cookies</a></li>
-                        <li><a href="/">Política de Privacidad</a></li>
-                        <li><a href="/">Mapa de sitio</a></li>
-                        <li><a href="/">Aliados K1N0C0M</a></li>
+                        <li><a href="/cookies">Política de Cookies</a></li>
+                        <li><a href="/privacy">Política de Privacidad</a></li>
+                        <li><a href="/sitemap">Mapa de sitio</a></li>
+                        <li><a href="#aliados">Aliados K1N0C0M</a></li>
                     </ul>
                 </div>
             </div>
@@ -30,17 +30,17 @@
                 <div class="footer__section--footer">
                     <ul class="section--social">
                         <li>
-                            <a class="social--link" target="_blank" rel="nofollow" href="https://facebook.com/">
+                            <a class="social--link" target="_blank" rel="nofollow" href="https://www.facebook.com/k1n0com">
                                 <img src="/img/face.png" alt="Facebook k1n0" title="Facebook | K1n0.com">
                             </a>
                         </li>
                         <li>
-                            <a class="social--link" target="_blank" rel="nofollow" href="https://linkedin.com/">
+                            <a class="social--link" target="_blank" rel="nofollow" href="https://www.linkedin.com/in/kino-trance-10792b203/">
                                 <img src="/img/linked.png" alt="LinkedIn k1n0" title="LinkedIn | K1n0.com">
                             </a>
                         </li>
                         <li>
-                            <a class="social--link" target="_blank" rel="nofollow" href="https://instagram.com/">
+                            <a class="social--link" target="_blank" rel="nofollow" href="https://www.instagram.com/kinotrance/">
                                 <img src="/img/insta.png" alt="Instagram k1n0" title="Instagram | K1n0.com">
                             </a>
                         </li>
