--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -17,8 +17,8 @@
     {{!-- Propiedades OG --}}
     <meta property="og:title" content="k1n0c0m | Servicios web y comunicaciones en Medellín">
     <meta property="og:type" content="Web">
-    <meta property="og:url" content="http://www.k1n0.com.co/">
-    <meta property="og:image" content="http://www.k1n0.com.co/img/logo-intro-black.jpg">
+    <meta property="og:url" content="https://www.k1n0.com.co/">
+    <meta property="og:image" content="https://www.k1n0.com.co/img/logo-intro-black.jpg">
     <meta property="og:image:secure_url" content="https://www.k1n0.com.co/img/logo-intro-black.jpg">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="60">
