--- a/src/views/layouts/nosotros.hbs
+++ b/src/views/layouts/nosotros.hbs
@@ -35,7 +35,7 @@
                 </div>
                 <div class="item--body" style="text-align: right;">
                     <p>
-                        En el año 2024 onvertirnos en la agencia líder en comunicación digital en Medellín 
+                        En el año 2024 ser reconocidos como la agencia líder en comunicación digital en Medellín 
                         y en la primera opción para clientes que buscan estrategias de comunicación digital
                         para su aplicación con público interno y externo.
                     </p>
