--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -24,13 +24,18 @@
     <meta property="og:image:width" content="60">
     <meta property="og:image:height" content="60">
     <meta property="og:local" content="es_LA" />
-    <meta property="og:description" content="k1n0c0m | Servicios web y comunicaciones en Medellín | Comunicaciones y desarrollo web">
+    <meta property="og:description"
+        content="k1n0c0m | Servicios web y comunicaciones en Medellín | Comunicaciones y desarrollo web">
     <meta property="og:site_name" content="k1n0c0m">
     {{!-- SEO --}}
     <meta name="google-site-verification" content="Ljsin1yVzfgxv31NsdVzUlObTNPOn-RHEMomyfNrA1E">
-    <meta name="description" content="k1n0c0m | Servicios web y comunicaciones en Medellín | Comunicación digital a la medida">
-    <meta name="keywords" content="servicios web, desarrollo web, comunicaciones, publicidad, comunicacion digital, posicionamiento, seo">
+    <meta name="description"
+        content="k1n0c0m | Servicios web y comunicaciones en Medellín | Comunicación digital a la medida">
+    <meta name="keywords"
+        content="servicios web, desarrollo web, comunicaciones, publicidad, comunicacion digital, posicionamiento, seo">
     <meta name="author" content="k1n0">
+    <script
+        type="application/ld+json">{"@context": "https://schema.org", "@type": "Organization", "url": "https://www.k1n0.com.co/", "contactPoint" : [{ "@type" : "ContactPoint","telephone" : "+57-313-588-7171","contactType" : "customer service"} ],"address": {"@type": "PostalAddress","addressLocality": "Medellín, Colombia","postalCode": "050024","streetAddress": "Calle 1B #66-94"},"email": "kinotrance@gmail.com","member": [{"@type": "Organization"}],"alumni": [{"@type": "Person","name": "k1n0"}],"name": "k1n0c0m","telephone": "( 57 4) 313 588 7171"}</script>
     {{!-- Título --}}
     <title>K1n0.com.co | Servicios web y comunicaciones en Medellín</title>
     {{!-- Google Font --}}
@@ -48,7 +53,7 @@
     {{!-- Favicon --}}
     <link rel="icon" type="image/ico" href="/img/favicon-ico-kino.ico">
 
-    
+
 </head>
 
 <body>
