--- a/src/views/partials/nav.hbs
+++ b/src/views/partials/nav.hbs
@@ -21,7 +21,7 @@
                         <div class="dropdown">
                             <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                <img class="icono__iniciar" src="/img/iniciar.png" alt="Selector k1n0" title="Tu cuenta">
+                                <img class="icono__iniciar" src="/img/usr-red.png" alt="Selector k1n0" title="Tu cuenta">
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <li><a class="dropdown-item" href="/profile">Perfil</a></li>
