--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -18,21 +18,22 @@
     <meta property="og:title" content="k1n0c0m | Servicios web y comunicaciones en Medellín">
     <meta property="og:type" content="Web">
     <meta property="og:url" content="https://www.k1n0.com.co/">
-    <meta property="og:image" content="https://www.k1n0.com.co/img/logo-intro-black.jpg">
+    <meta property="og:image" content="http://www.k1n0.com.co/img/logo-intro-black.jpg">
     <meta property="og:image:secure_url" content="https://www.k1n0.com.co/img/logo-intro-black.jpg">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="60">
     <meta property="og:image:height" content="60">
     <meta property="og:local" content="es_LA" />
     <meta property="og:description"
-        content="k1n0c0m | Servicios web y comunicaciones en Medellín | Comunicaciones y desarrollo web">
+        content="k1n0c0m | Marketing Digital y Comunicación digital en Medellín | Comunicaciones y servicios web">
     <meta property="og:site_name" content="k1n0c0m">
     {{!-- SEO --}}
     <meta name="google-site-verification" content="Ljsin1yVzfgxv31NsdVzUlObTNPOn-RHEMomyfNrA1E">
     <meta name="description"
-        content="k1n0c0m | Servicios web y comunicaciones en Medellín | Comunicación digital a la medida">
+        content="k1n0c0m | Marketing Digital y Comunicación digital en Medellín | Servicios web profesionales">
     <meta name="keywords"
-        content="servicios web, desarrollo web, comunicaciones, publicidad, comunicacion digital, posicionamiento, seo">
+        content="marketing digital, comunicación digital en Medellín, servicios web, desarrollo web, comunicaciones, publicidad, comunicacion digital, posicionamiento, seo, posicionamiento,
+        paginas web, aplicaciones, apps, fotografía, video, animaciones, planes de comunicaciones, planes de comunicacion">
     <meta name="author" content="k1n0">
     <script
         type="application/ld+json">{"@context": "https://schema.org", "@type": "Organization", "url": "https://www.k1n0.com.co/", "contactPoint" : [{ "@type" : "ContactPoint","telephone" : "+57-313-588-7171","contactType" : "customer service"} ],"address": {"@type": "PostalAddress","addressLocality": "Medellín, Colombia","postalCode": "050024","streetAddress": "Calle 1B #66-94"},"email": "kinotrance@gmail.com","member": [{"@type": "Organization"}],"alumni": [{"@type": "Person","name": "k1n0"}],"name": "k1n0c0m","telephone": "( 57 4) 313 588 7171"}</script>
