--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -18,7 +18,6 @@
                         <li><a href="/cookies">Política de Cookies</a></li>
                         <li><a href="/privacy">Política de Privacidad</a></li>
                         <li><a href="/sitemap">Mapa de sitio</a></li>
-                        <li><a href="#aliados">Aliados K1N0C0M</a></li>
                     </ul>
                 </div>
             </div>
@@ -28,19 +27,31 @@
                     <h4>Contacto</h4>
                 </div>
                 <div class="footer__section--footer">
+                    <ul class="address">
+                        <li>
+                            <a href="https://wa.link/ra2121" target="_blank" rel="nofollow">(+57 4) 313 588 7171</a>
+                        </li>
+                        <li>
+                            <a href="https://goo.gl/maps/692mg6D97drvYrQt9" target="_blank" rel="nofollow">Calle 1B
+                                #66-94, Medellín - Antioquia</a>
+                        </li>
+                    </ul>
                     <ul class="section--social">
                         <li>
-                            <a class="social--link" target="_blank" rel="nofollow" href="https://www.facebook.com/k1n0com">
+                            <a class="social--link" target="_blank" rel="nofollow"
+                                href="https://www.facebook.com/k1n0com">
                                 <img src="/img/face.png" alt="Facebook k1n0" title="Facebook | K1n0.com">
                             </a>
                         </li>
                         <li>
-                            <a class="social--link" target="_blank" rel="nofollow" href="https://www.linkedin.com/in/kino-trance-10792b203/">
+                            <a class="social--link" target="_blank" rel="nofollow"
+                                href="https://www.linkedin.com/in/kino-trance-10792b203/">
                                 <img src="/img/linked.png" alt="LinkedIn k1n0" title="LinkedIn | K1n0.com">
                             </a>
                         </li>
                         <li>
-                            <a class="social--link" target="_blank" rel="nofollow" href="https://www.instagram.com/kinotrance/">
+                            <a class="social--link" target="_blank" rel="nofollow"
+                                href="https://www.instagram.com/kinotrance/">
                                 <img src="/img/insta.png" alt="Instagram k1n0" title="Instagram | K1n0.com">
                             </a>
                         </li>
@@ -50,7 +61,8 @@
                             </a>
                         </li>
                         <li>
-                            <a class="social--link" target="_blank" rel="nofollow" href="https://goo.gl/maps/692mg6D97drvYrQt9">
+                            <a class="social--link" target="_blank" rel="nofollow"
+                                href="https://goo.gl/maps/692mg6D97drvYrQt9">
                                 <img src="/img/pointer-dos.png" alt="Maps k1n0" title="Maps | K1n0.com">
                             </a>
                         </li>
@@ -68,11 +80,13 @@
                     </a>
                 </div>
             </div>
-            
+
         </div>
     </div>
 
-    <p class="footer__right">
-        Todos los derechos reservados - K1N0COM 2021
-    </p>
+    <div class="container">
+        <p class="footer__right">
+            Todos los derechos reservados - K1N0COM 2021
+        </p>
+    </div>
 </div>
