--- a/src/views/partials/home.hbs
+++ b/src/views/partials/home.hbs
@@ -15,7 +15,8 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/img/kino-bg-b.jpg" class="d-block w-100" alt="k1n0 Comunicaciones" title="k1n0 Comunicaciones">
+                <img src="/img/kino-bg-b.jpg" class="d-block w-100" alt="k1n0 Comunicaciones"
+                    title="k1n0 Comunicaciones">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Planeación y Comunicación</h5>
                     <p>Planes de comunicación estratégicos para el rendimiento de cualquier compañía.</p>
@@ -39,7 +40,6 @@
         </a>
     </div>
 </div>
-
 <div class="carousel__mob">
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <ol class="carousel-indicators">
@@ -49,21 +49,24 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/img/kino-bg-amob.jpg" class="d-block w-100"  alt="k1n0 Diseño Ilustraciones" title="k1n0 | Diseño Ilustraciones">
+                <img src="/img/kino-bg-amob.jpg" class="d-block w-100" alt="k1n0 Diseño Ilustraciones"
+                    title="k1n0 | Diseño Ilustraciones">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Diseño e ilustración</h5>
                     <p>Diseño profesional, personalizado y con calidad de punta.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/img/kino-bg-bmob.jpg" class="d-block w-100" alt="k1n0 Comunicaciones" title="k1n0 | Comunicaciones">
+                <img src="/img/kino-bg-bmob.jpg" class="d-block w-100" alt="k1n0 Comunicaciones"
+                    title="k1n0 | Comunicaciones">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Planeación y Comunicación</h5>
                     <p>Planes de comunicación estratégicos para el rendimiento de cualquier compañía.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/img/kino-bg-cmob.jpg" class="d-block w-100" alt="k1n0 Desarrollo Web" title="k1n0 | Desarrollo Web/Apps">
+                <img src="/img/kino-bg-cmob.jpg" class="d-block w-100" alt="k1n0 Desarrollo Web"
+                    title="k1n0 | Desarrollo Web/Apps">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Desarrollo Web y App's</h5>
                     <p>Funcionalidad, navegación y velocidad en todos tus sistemas.</p>
@@ -126,7 +129,8 @@
                                         <h3>Diseño personalizado y original</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/design.png" alt="k1n0 Diseño Ilustraciones" title="k1n0 | Diseño Ilustraciones">
+                                        <img class="serv__img--item" src="/img/services/design.png"
+                                            alt="k1n0 Diseño Ilustraciones" title="k1n0 | Diseño Ilustraciones">
                                     </div>
                                     <div class="serv__body">
                                         <p>
@@ -140,7 +144,8 @@
                                         <h3>Desarrollo web y móvil</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/android.png" alt="k1n0 Web/Apps" title="k1n0 | Desarrollo Web/Apps">
+                                        <img class="serv__img--item" src="/img/services/android.png" alt="k1n0 Web/Apps"
+                                            title="k1n0 | Desarrollo Web/Apps">
                                     </div>
                                     <div class="serv__body">
                                         <p>
@@ -154,7 +159,8 @@
                                         <h3>Fotografía y retoque profesional</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/photo.png" alt="k1n0 Fotografía" title="k1n0 | Fotografía">
+                                        <img class="serv__img--item" src="/img/services/photo.png" alt="k1n0 Fotografía"
+                                            title="k1n0 | Fotografía">
                                     </div>
                                     <div class="serv__body">
                                         <p>
@@ -177,7 +183,8 @@
                                         <h3>Planeación organizacional</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/planning.png" alt="k1n0 Planeación" title="k1n0 | Planeación">
+                                        <img class="serv__img--item" src="/img/services/planning.png"
+                                            alt="k1n0 Planeación" title="k1n0 | Planeación">
                                     </div>
                                     <div class="serv__body">
                                         <p>
@@ -191,7 +198,8 @@
                                         <h3>Diagnóstico SEO/Posicionamiento</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/position.png" alt="k1n0 SEO" title="k1n0 | SEO Posicionamiento">
+                                        <img class="serv__img--item" src="/img/services/position.png" alt="k1n0 SEO"
+                                            title="k1n0 | SEO Posicionamiento">
                                     </div>
                                     <div class="serv__body">
                                         <p>
@@ -205,7 +213,8 @@
                                         <h3>Producción y edición audiovisual</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/video.png" alt="k1n0 Video" title="k1n0 | Audiovisuales">
+                                        <img class="serv__img--item" src="/img/services/video.png" alt="k1n0 Video"
+                                            title="k1n0 | Audiovisuales">
                                     </div>
                                     <div class="serv__body">
                                         <p>
@@ -246,7 +255,8 @@
                                         <h3>Diseño personalizado y original</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/design.png" alt="k1n0 Diseño Ilustraciones" title="k1n0 | Diseño Ilustraciones">
+                                        <img class="serv__img--item" src="/img/services/design.png"
+                                            alt="k1n0 Diseño Ilustraciones" title="k1n0 | Diseño Ilustraciones">
                                     </div>
                                     <div class="serv__body">
                                         <p>
@@ -270,7 +280,8 @@
                                         <h3>Desarrollo web y móvil</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/android.png" alt="k1n0 Web/Apps" title="k1n0 | Desarrollo Web/Apps">
+                                        <img class="serv__img--item" src="/img/services/android.png" alt="k1n0 Web/Apps"
+                                            title="k1n0 | Desarrollo Web/Apps">
                                     </div>
                                     <div class="serv__body">
                                         <p>
@@ -292,7 +303,8 @@
                                         <h3>Fotografía y retoque profesional</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/photo.png" alt="k1n0 Fotografía" title="k1n0 | Fotografía">
+                                        <img class="serv__img--item" src="/img/services/photo.png" alt="k1n0 Fotografía"
+                                            title="k1n0 | Fotografía">
                                     </div>
                                     <div class="serv__body">
                                         <p>
@@ -312,7 +324,8 @@
                                         <h3>Planeación organizacional</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/planning.png" alt="k1n0 Planeación" title="k1n0 | Planeación">
+                                        <img class="serv__img--item" src="/img/services/planning.png"
+                                            alt="k1n0 Planeación" title="k1n0 | Planeación">
                                     </div>
                                     <div class="serv__body">
                                         <p>
@@ -331,7 +344,8 @@
                                         <h3>Diagnóstico SEO/Posicionamiento</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/position.png" alt="k1n0 SEO" title="k1n0 | SEO Posicionamiento">
+                                        <img class="serv__img--item" src="/img/services/position.png" alt="k1n0 SEO"
+                                            title="k1n0 | SEO Posicionamiento">
                                     </div>
                                     <div class="serv__body">
                                         <p>
@@ -350,7 +364,8 @@
                                         <h3>Producción y edición audiovisual</h3>
                                     </div>
                                     <div class="serv__img">
-                                        <img class="serv__img--item" src="/img/services/video.png" alt="k1n0 Video" title="k1n0 | Audiovisuales">
+                                        <img class="serv__img--item" src="/img/services/video.png" alt="k1n0 Video"
+                                            title="k1n0 | Audiovisuales">
                                     </div>
                                     <div class="serv__body">
                                         <p>
@@ -389,7 +404,8 @@
 
         <div class="claims__fig">
             <div class="claim-a">
-                <img src="/img/claims/atencion.png" alt="Claim Asesoría" title="Asesoramiento | k1n0.com" class="img__claim">
+                <img src="/img/claims/atencion.png" alt="Claim Asesoría" title="Asesoramiento | k1n0.com"
+                    class="img__claim">
                 <p class="txt__claim">Asesoramiento humano y atención personalizada.</p>
             </div>
 
@@ -406,7 +422,8 @@
 
         <div class="claims__mob">
             <div class="claim-a">
-                <img src="/img/claims/atencion.png" alt="Claim Asesoría" title="Asesoramiento | k1n0.com" class="img__claim">
+                <img src="/img/claims/atencion.png" alt="Claim Asesoría" title="Asesoramiento | k1n0.com"
+                    class="img__claim">
                 <p class="txt__claim">Asesoramiento humano y atención personalizada.</p>
             </div>
 
