--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -35,8 +35,7 @@
         content="marketing digital, comunicación digital en Medellín, servicios web, desarrollo web, comunicaciones, publicidad, comunicacion digital, posicionamiento, seo, posicionamiento,
         paginas web, aplicaciones, apps, fotografía, video, animaciones, planes de comunicaciones, planes de comunicacion">
     <meta name="author" content="k1n0">
-    <script
-        type="application/ld+json">{"@context": "https://schema.org", "@type": "Organization", "url": "https://www.k1n0.com.co/", "contactPoint" : [{ "@type" : "ContactPoint","telephone" : "+57-313-588-7171","contactType" : "customer service"} ],"address": {"@type": "PostalAddress","addressLocality": "Medellín, Colombia","postalCode": "050024","streetAddress": "Calle 1B #66-94"},"email": "kinotrance@gmail.com","member": [{"@type": "Organization"}],"alumni": [{"@type": "Person","name": "k1n0"}],"name": "k1n0c0m","telephone": "( 57 4) 313 588 7171"}</script>
+    <script src="/js/schema.js"></script>
     {{!-- Título --}}
     <title>K1n0.com.co | Servicios web y comunicaciones en Medellín</title>
     {{!-- Google Font --}}
