--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -35,7 +35,7 @@
         content="marketing digital, comunicación digital en Medellín, servicios web, desarrollo web, comunicaciones, publicidad, comunicacion digital, posicionamiento, seo, posicionamiento,
         paginas web, aplicaciones, apps, fotografía, video, animaciones, planes de comunicaciones, planes de comunicacion">
     <meta name="author" content="k1n0">
-    <script src="/js/schema.js"></script>
+    <script src="/src/public/js/schema.js"></script>
     {{!-- Título --}}
     <title>K1n0.com.co | Servicios web y comunicaciones en Medellín</title>
     {{!-- Google Font --}}
