--- a/src/views/links/add.hbs
+++ b/src/views/links/add.hbs
@@ -19,6 +19,30 @@
                             </select>
                         </div>
                         <div class="form-group m-2">
+                            {{!-- <input type="text" name="title" class="form-control" placeholder="Title" autofocus>
+                            --}}
+                            <select class="form-select" name="service" aria-label="Default select example">
+                                <option selected>Seleccione el área de servicio</option>
+                                <option value="Diseño">Diseño 2D</option>
+                                <option value="Diseño3d">Diseño 3D</option>
+                                <option value="Ilustración">Ilustración</option>
+                                <option value="Desarrollo Web PHP">Desarrollo Web PHP</option>
+                                <option value="Desarrollo Web Node">Desarrollo Web Node</option>
+                                <option value="Desarrollo Web Python">Desarrollo Web Python</option>
+                                <option value="Desarrollo App Basic">Desarrollo App Basic</option>
+                                <option value="Desarrollo App Pro">Desarrollo App Pro</option>
+                                <option value="Desarrollo App Prem">Desarrollo App Premium</option>
+                                <option value="Plan Com">Plan de Comunicación</option>
+                                <option value="Estudio">Estudio de Mercado</option>
+                                <option value="360">360</option>
+                                <option value="Fotografía">Fotografía</option>
+                                <option value="Video">Producción audiovisual</option>
+                                <option value="Edición">Edición Video</option>
+                                <option value="Community Management">Community Management</option>
+                                <option value="Otros">Otros</option>
+                            </select>
+                        </div>
+                        <div class="form-group m-2">
                             <label style="color: black;" class="form-label">Destino del servicio (URL)</label>
                             <input type="url" name="url" class="form-control" placeholder="Url">
                         </div>
