--- a/src/views/auth/signup.hbs
+++ b/src/views/auth/signup.hbs
@@ -17,7 +17,7 @@
                             <input type="password" name="password" class="form-control m-2" placeholder="Password">
                         </div>
                         <div class="form-group m-2">
-                            <input type="tel" name="phone" placeholder="Teléfono/Celular" class="form-control m-2" autofocus>
+                            <input type="text" name="phone" placeholder="Teléfono/Celular" class="form-control m-2" autofocus>
                         </div>
                         <div class="form-group m-2">
                             <input type="email" name="email" class="form-control m-2" placeholder="Correo electrónico">
