fixes varios tres

--- a/src/views/partials/nav.hbs
+++ b/src/views/partials/nav.hbs
@@ -21,6 +21,7 @@
                         <div class="dropdown">
                             <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton"
                                 data-bs-toggle="dropdown" aria-expanded="false">
+                                {{user.username}}
                                 <img class="icono__iniciar" src="/img/usr-red.png" alt="Selector k1n0" title="Tu cuenta">
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
