facebook app id

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -15,18 +15,21 @@
         gtag('config', 'G-JLP0S9FLPD');
     </script>
     {{!-- Propiedades OG --}}
-    <meta property="og:title" content="k1n0c0m | Servicios web y comunicaciones en Medellín">
+    <meta property="og:title" content="k1n0c0m | Marketing Digital y Comunicación Digital en Medellín">
     <meta property="og:type" content="Web">
     <meta property="og:url" content="https://www.k1n0.com.co/">
     <meta property="og:image"
         content="https://scontent.feoh1-1.fna.fbcdn.net/v/t1.0-9/139661015_1117533562021933_478162099764357035_n.jpg?_nc_cat=109&ccb=2&_nc_sid=e3f864&_nc_eui2=AeEuBWbqhTSivV9FcfxXoRG5zfFyRZrAOMrN8XJFmsA4ysASADOzmr3BpZAGkDr3kM9kw7yCwe1n6wxmhBoFmYFV&_nc_ohc=p5398yM_PLwAX-Y3cpL&_nc_ht=scontent.feoh1-1.fna&oh=bb433948d431c1675e1b65c5a7dd6603&oe=60288BF6">
     <meta property="og:image:secure_url"
         content="https://scontent.feoh1-1.fna.fbcdn.net/v/t1.0-9/139661015_1117533562021933_478162099764357035_n.jpg?_nc_cat=109&ccb=2&_nc_sid=e3f864&_nc_eui2=AeEuBWbqhTSivV9FcfxXoRG5zfFyRZrAOMrN8XJFmsA4ysASADOzmr3BpZAGkDr3kM9kw7yCwe1n6wxmhBoFmYFV&_nc_ohc=p5398yM_PLwAX-Y3cpL&_nc_ht=scontent.feoh1-1.fna&oh=bb433948d431c1675e1b65c5a7dd6603&oe=60288BF6">
+    <meta property="og:image:width" content="851">
+    <meta property="og:image:height" content="315">   
     <meta property="og:image:type" content="image/jpg">
-    <meta property="og:local" content="es_LA" />
+    <meta property="og:local" content="es_LA">
     <meta property="og:description"
         content="k1n0c0m | Marketing Digital y Comunicación digital en Medellín | Comunicaciones y servicios web">
     <meta property="og:site_name" content="k1n0c0m">
+    <meta property="fb:app_id" content="247122750125242">
     {{!-- SEO --}}
     <meta name="google-site-verification" content="Ljsin1yVzfgxv31NsdVzUlObTNPOn-RHEMomyfNrA1E">
     <meta name="description"
