--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -22,6 +22,9 @@
                                 data-callback='onSubmit' data-action='submit'>Ingresa</button>
                         </div>
                     </form>
+                    <div class="container text-center">
+                        <div class="g-signin2 m-4" data-onsuccess="onSignIn"></div>
+                    </div>
                 </div>
             </div>
         </div>
