--- a/src/views/partials/nav.hbs
+++ b/src/views/partials/nav.hbs
@@ -28,7 +28,7 @@
                                 <li><a class="dropdown-item" href="/profile">Perfil</a></li>
                                 <li><a class="dropdown-item" href="/links">Mi cuenta</a></li>
                                 <li><a class="dropdown-item" href="/links/add">Solicitar</a></li>
-                                <li><a class="dropdown-item" href="/logout">Cerrar sesión</a></li>
+                                <li><a class="dropdown-item" href="/logout" onclick="signOut();">Cerrar sesión</a></li>
                             </ul>
                         </div>
                         {{else}}
